--- a/runtime/registrar/pom.xml
+++ b/runtime/registrar/pom.xml
@@ -16,10 +16,10 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.eclipse.osgi.technology.webservices</groupId>
-    <artifactId>runtime</artifactId>
+    <artifactId>org.eclipse.osgi.technology.webservices.runtime</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
-  <artifactId>registrar</artifactId>
+  <artifactId>org.eclipse.osgi.technology.webservices.runtime.registrar</artifactId>
   <dependencies>
     <dependency>
       <groupId>jakarta.xml.ws</groupId>
