--- a/runtime/registrar/pom.xml
+++ b/runtime/registrar/pom.xml
@@ -15,7 +15,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.eclipse.osgi.technology.webservices</groupId>
+    <groupId>org.eclipse.osgi-technology.webservices</groupId>
     <artifactId>org.eclipse.osgi.technology.webservices.runtime</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
@@ -26,7 +26,7 @@
       <artifactId>jakarta.xml.ws-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.eclipse.osgi.technology.webservices</groupId>
+      <groupId>org.eclipse.osgi-technology.webservices</groupId>
       <artifactId>org.eclipse.osgi.technology.webservices.api</artifactId>
       <version>1.0.0-SNAPSHOT</version>
       <scope>provided</scope>
