Add Http WHiteboard Publisher
this adds an implementation of the publisher SPI that uses the http
whiteboard as its backend implementation.

--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -23,5 +23,6 @@
   <packaging>pom</packaging>
   <modules>
     <module>registrar</module>
-  </modules>
+    <module>httpwhiteboard</module>
+   </modules>
 </project>
